# FFXIV-RaidsRewritten

./: .gitattributes  .gitmodules  README.md
DalamudPlugin/: .gitignore  RaidsRewritten.sln
DalamudPlugin/RaidsRewritten/: AttackManager.cs  CommandDispatcher.cs  Configuration.cs  DalamudServices.cs  EffectsRenderer.cs  EffectsRendererPresenter.cs  EncounterManager.cs  EntityManager.cs  IDalamudHook.cs  LoadConfig.cs  MapManager.cs  PlayerManager.cs  Plugin.cs  PluginInitializer.cs  RaidsRewritten.csproj  RaidsRewritten.json  StatusManager.cs  config.json  notes.txt  packages.lock.json  runtimeconfig.template.json
DalamudPlugin/RaidsRewritten/Audio/: AudioDeviceController.cs  AudioFalloffModel.cs  CachedSound.cs  CachedSoundSampleProvider.cs  IAudioDeviceController.cs  PlaybackChannel.cs  Spatializer.cs
DalamudPlugin/RaidsRewritten/Data/: Actions.cs  HudElementInfo.cs  LoadConfig.cs  Status.cs  XivChatSendLocation.cs  XivHudNodeMap.cs
TestClient/: LongNameContractResolver.cs  Message.cs  Program.cs  TestClient.csproj
raidsrewritten_server/: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
raidsrewritten_server/prometheus/: prometheus.yml
raidsrewritten_server/src/: ecs_container.rs  game.rs  main.rs  system_messages.rs  webserver.rs
raidsrewritten_server/src/game/: components.rs  condition.rs  mechanics.rs  role.rs  utils.rs
raidsrewritten_server/src/game/mechanics/: 0001-spread.rs  0010-enumeration.rs  0020-explosive_trap.rs  1000-tea_fire_tornado_1.rs  spread.rs
raidsrewritten_server/src/webserver/: message.rs  metrics.rs
(+380 files in other folders)
