[package]
name = "raidsrewritten_server"
version = "0.1.0"
edition = "2024"

[dependencies]
socketioxide = { version = "0.18", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
strum_macros = "0.27"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = "1"
flecs_ecs = "0.2"
futures = "0.3"
