[package]
name = "raidsrewritten_server"
version = "2.0.3"
edition = "2024"

[dependencies]
socketioxide = { version = "0.18", features = ["v4"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
strum_macros = "0.27"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = "1"
serde_repr = "0.1"
serde_with = "3"
flecs_ecs = "0.2"
futures = "0.3"
distances = "1.8.0"
rand = "0.9.2"
uuid = { version = "1.20.0", features = ["v4"] }
string-builder = "0.2.0"
prometheus = { version = "0.14.0", features = ["process"] }
lazy_static = "1.5.0"
